# maze-game-opengl

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt  execution.txt
dependencies/include/glad/: glad.c  glad.h
shaders/: cube.frag  cube.vert  floor.frag  floor.vert  wall.frag
src/: camera.h  collision.h  cube.h  floor.h  main.cpp  main_old.cpp  maze.h  settings.h  shader_s.h
